--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
   padding: 2rem;
   background: linear-gradient(
     90deg,
-    rgba(59, 84, 223, 1) 0%,
+    #3a52df 0%,
     rgba(115, 33, 243, 0.81) 100%
   );
 }
